--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
   --color-gray-1000: #1e1e1e;
   --color-neutral-555: #555555;
   --color-neutral-333: #333333;
+  --color-product-bg: #e8e5dc;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -53,6 +54,10 @@
 
 .btn-base {
   @apply flex items-center justify-center bg-gray-1000 text-white py-2 w-full text-sm gap-[10px] active:bg-neutral-800 cursor-pointer;
+}
+
+.btn-base-lg {
+  @apply flex items-center justify-center bg-gray-1000 text-white py-4 w-full text-lg gap-[10px] active:bg-neutral-800 cursor-pointer;
 }
 
 :root {
