--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
   --color-neutral-555: #555555;
   --color-neutral-333: #333333;
   --color-product-bg: #e8e5dc;
+  --color-bleached-orange: #dd8560;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -66,6 +67,54 @@
   animation: slideUp 300ms ease-out;
 }
 
+.bg-welcome-1 {
+  background: linear-gradient(180deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%)
+      top,
+    linear-gradient(0deg, #1b1a19 0%, rgba(115, 115, 115, 0) 100%) bottom,
+    url('/images/welcome-page-1.jpg') center no-repeat;
+  background-size: 100% 40%, 100% 40%, cover;
+  background-repeat: no-repeat;
+}
+
+.bg-welcome-2 {
+  background: linear-gradient(180deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%)
+      top,
+    linear-gradient(0deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%) bottom,
+    url('/images/welcome-page-2.jpg') center no-repeat;
+  background-size: 100% 40%, 100% 40%, cover;
+  background-repeat: no-repeat;
+}
+
+.bg-welcome-3 {
+  background: linear-gradient(180deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%)
+      top,
+    linear-gradient(0deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%) bottom,
+    url('/images/welcome-page-3.jpg') center no-repeat;
+  background-size: 100% 40%, 100% 40%, cover;
+  background-repeat: no-repeat;
+}
+
+.bg-welcome-4 {
+  background: linear-gradient(180deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%)
+      top,
+    linear-gradient(0deg, #1b1a19 0%, rgb(115, 115, 115, 0) 100%) bottom,
+    url('/images/welcome-page-4.jpg') center no-repeat;
+  background-size: 100% 40%, 100% 40%, cover;
+  background-repeat: no-repeat;
+}
+
+.btn-base {
+  @apply flex items-center justify-center bg-gray-1000 text-white py-2 w-full text-sm gap-[10px] active:bg-neutral-800 cursor-pointer;
+}
+
+.btn-base-lg {
+  @apply flex items-center justify-center bg-gray-1000 text-white py-4 w-full text-lg gap-[10px] active:bg-neutral-800 cursor-pointer;
+}
+
+.btn-base-light {
+  @apply flex items-center justify-center bg-white text-black py-4 w-full text-xl gap-[8px] active:bg-neutral-200 cursor-pointer rounded;
+}
+
 @keyframes slideDown {
   from {
     height: 0;
@@ -82,14 +131,6 @@
   to {
     height: 0;
   }
-}
-
-.btn-base {
-  @apply flex items-center justify-center bg-gray-1000 text-white py-2 w-full text-sm gap-[10px] active:bg-neutral-800 cursor-pointer;
-}
-
-.btn-base-lg {
-  @apply flex items-center justify-center bg-gray-1000 text-white py-4 w-full text-lg gap-[10px] active:bg-neutral-800 cursor-pointer;
 }
 
 :root {
